--- a/index.html
+++ b/index.html
@@ -3,12 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>DevOps Project 1.5: Git Clone Deployment</title>
+    <title>DevOps Project 3: CI/CD Pipeline</title>
     <style>
         body {
             font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif;
-            background-color: #1a1a1a; /* Slightly lighter background */
-            color: #e0e0e0;
+            background-color: #1c1c1e;
+            color: #f0f0f0;
             display: flex;
             justify-content: center;
             align-items: center;
@@ -17,41 +17,55 @@
             text-align: center;
         }
         .container {
-            padding: 40px;
-            border-radius: 12px;
-            background-color: #242424; /* Lighter container */
-            box-shadow: 0 8px 32px rgba(0, 0, 0, 0.3);
-            border: 1px solid #444; /* Lighter border */
-            max-width: 600px;
+            padding: 50px;
+            border-radius: 15px;
+            background-color: #2c2c2e;
+            box-shadow: 0 10px 40px rgba(0, 0, 0, 0.4);
+            border: 1px solid #4a4a4c;
+            max-width: 650px;
+            transform: scale(1);
+            transition: transform 0.3s ease-in-out;
+        }
+        .container:hover {
+            transform: scale(1.02);
         }
         h1 {
-            color: #22cc88; /* New accent color */
-            font-size: 2em;
+            color: #ff9500; /* A vibrant orange */
+            font-size: 2.2em;
+            text-shadow: 0 0 15px rgba(255, 149, 0, 0.3);
         }
         p {
-            font-size: 1.1em;
-            line-height: 1.6;
+            font-size: 1.2em;
+            line-height: 1.7;
         }
         code {
-            background-color: #333; /* Darker code background */
-            padding: 3px 6px;
-            border-radius: 4px;
+            background-color: #3a3a3c;
+            padding: 4px 8px;
+            border-radius: 5px;
             font-family: "SF Mono", "Fira Code", "Fira Mono", "Roboto Mono", monospace;
+            color: #ff9500;
         }
         .footer {
-            margin-top: 20px;
-            font-size: 0.9em;
-            color: #888;
+            margin-top: 30px;
+            font-size: 1em;
+            color: #8e8e93;
+        }
+        .success-icon {
+            font-size: 3em;
+            color: #34c759; /* Green for success */
+            margin-bottom: 15px;
         }
     </style>
 </head>
 <body>
     <div class="container">
-        <h1>Deployment v2 Successful!</h1>
-        <p>This application code was cloned from a dedicated Git repository by the <code>provision.sh</code> script.</p>
+        <div class="success-icon">✓</div>
+        <h1>CI/CD Pipeline Activated!</h1>
+        <p>This version was deployed **automatically** by a GitHub Actions workflow triggered by a <code>git push</code>.</p>
         <div class="footer">
-            <p><strong>Phase 1.5 Goal:</strong> Separate infrastructure code from application code.</p>
+            <p><strong>Phase 3 Goal:</strong> Automate application deployment from source control.</p>
         </div>
     </div>
 </body>
 </html>
+
